recursion.cons.lessons.recursion.cons.Nlast.scala.error
nlast:2: error: not found: type int
	def fonctionInterne(l:List[int],n:Int):List[Int]={
                                   ^